--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -25,20 +25,20 @@
 // smart phone
 @media (max-width: 739px) {
   :root {
-    --navmenu-width: 70px;
+    // --navmenu-width: 70px;
   }
   .navmenu__tab {
-    justify-content: center;
-    height: 50px !important;
+    // justify-content: center;
+    // height: 50px !important;
   }
 
   .navmenu__tab-ico {
-    margin-left: 0px !important;
+    // margin-left: 0px !important;
   }
   .navmenu__tab-text {
-    display: none;
+    // display: none;
   }
   .navmenu__tab-select {
-    display: none;
+    // display: none;
   }
 }
